<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/search">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:text="@string/chow_finder"
        android:textStyle="bold"
        android:textSize="50sp"/>

    <LinearLayout
        android:id="@+id/city_state_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/enter_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_city"
            android:textStyle="italic"
            android:textSize="20sp"
            android:inputType="text"
            android:background="@drawable/edittext_border"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/enter_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_state"
            android:textStyle="italic"
            android:textSize="20sp"
            android:inputType="text"
            android:background="@drawable/edittext_border"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/enter_cuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_cuisine"
            android:textStyle="italic"
            android:textSize="20sp"
            android:inputType="text"
            android:background="@drawable/edittext_border"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:textSize="22sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="40dp" />

</RelativeLayout>