<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/information_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/enter_api_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_api_key_text"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_api_key_ph"
            android:layout_below="@id/enter_api_key"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="50dp"
            android:layout_marginHorizontal="100dp"
            android:inputType="text"
            android:textSize="15sp"
            android:padding="5dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:background="@drawable/edittext_border" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:layout_below="@id/input_text"
            android:layout_centerHorizontal="true"
            android:textSize="20sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>